--- a/v1.5/members.html
+++ b/v1.5/members.html
@@ -96,7 +96,7 @@
             <div class = "container">
                 <h2> Executive Board </h2>
                 <div class = "row">
-                    <div class = "col-6 col-sm-3">
+                    <div class = "col-6 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">"Education is the most powerful weapon which you can use to change the world" - Nelson Mandela</div>
                             <div class = "img-container">
@@ -108,7 +108,7 @@
                         <p class = "name"> Bongi Fleischer</p>
                         <p class = "role"> Chief Executive Officer <br> ceo@icb.berkeley.edu</p>
                     </div>
-                    <div class = "col-6 col-sm-3">
+                    <div class = "col-6 col-md-3">
                         <div class="dot red">
                             <div class = "quote">Try new things and don't be scared of success.</div>
                             <div class = "img-container">
@@ -120,7 +120,7 @@
                         <p class = "name"> Carlos Oriol Lopez-Tenorio</p>
                         <p class = "role"> Chief Financial Officer <br> cfo@icb.berkeley.edu</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">*screams in international Kpop sensational sunshine rainbow traditional transfer USB hub shrimp</div>
                             <div class = "img-container">
@@ -132,7 +132,7 @@
                         <p class = "name"> Maya Chen</p>
                         <p class = "role"> Chief Operations Officer <br> cpo@icb.berkeley.edu</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">Would I rather be feared or loved? Both. I want people to be afraid of how much they love me.</div>
                             <div class = "img-container">
@@ -146,7 +146,7 @@
                     </div>
                 <!-- </div> -->
                 <!-- <div class = "row"> -->
-                    <div class = "col-4 col-sm-4">
+                    <div class = "col-4 col-md-4">
                         <div class="dot yellow">
                             <div class = "quote">Nothing is impossible, the word itself says, I'm possible!</div>
                             <div class = "img-container">
@@ -158,7 +158,7 @@
                         <p class = "name"> Grace Lam</p>
                         <p class = "role"> Chief Projects Officer <br> cpo@icb.berkeley.edu</p>
                     </div>
-                    <div class = "col-6 col-sm-4">
+                    <div class = "col-6 col-md-4">
                         <div class="dot blue">
                             <div class = "quote">meh... <br> — gudetama</div>
                             <div class = "img-container">
@@ -170,7 +170,7 @@
                         <p class = "name"> Jasmine Chen</p>
                         <p class = "role"> Chief Marketing Officer <br> cmo@icb.berkeley.edu</p>
                     </div>
-                    <div class = "col-6 col-sm-4">
+                    <div class = "col-6 col-md-4">
                         <div class="dot green">
                             <div class = "quote">I also wanted to sleep in, but here we both are...</div>
                             <div class = "img-container">
@@ -192,7 +192,7 @@
                 <h2> Our Team </h2>
                 
                 <div class = "row">
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">"Being wrong is a natural part of being. But to not change is to be wrong."</div>
                             <div class = "img-container">
@@ -204,7 +204,7 @@
                         <p class = "name"> Abhinav Subramaniam </p>
                         <p class = "role"> Mechanical Engineering </p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -216,7 +216,7 @@
                         <p class = "name"> Anderson Lee</p>
                         <p class = "role"> Bioengineering </p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot green">
                             <div class = "quote">Do you wanna start a band?</div>
                             <div class = "img-container">
@@ -228,7 +228,7 @@
                         <p class = "name"> Anika Singhania </p>
                         <p class = "role"> Computer Science </p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -242,7 +242,7 @@
                     </div>
                 <!-- </div>
                 <div class = "row"> -->
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -254,7 +254,7 @@
                         <p class = "name"> Aryan Nair </p>
                         <p class = "role" >Chemical Engineering</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -266,7 +266,7 @@
                         <p class = "name">Batu Akkas</p>
                         <p class = "role"> Bioengineering </p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -278,7 +278,7 @@
                         <p class = "name"> Brendan Shih </p>
                         <p class = "role"> Undecided </p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot green">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -292,7 +292,7 @@
                     </div>
                 <!-- </div>
                 <div class = "row"> -->
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot green">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -304,7 +304,7 @@
                         <p class = "name"> Courtnie Chan</p>
                         <p class = "role">Computer Science</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -316,7 +316,7 @@
                         <p class = "name"> Dan Chen</p>
                         <p class = "role">Statistics</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">Click <a href="https://www.linkedin.com/in/irisghou/">here</a> for a random ideas generator!</div>
                             <div class = "img-container">
@@ -328,7 +328,7 @@
                         <p class = "name"> Iris Hou</p>
                         <p class = "role">Interdisciplinary Studies</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">For what purpose?</div>
                             <div class = "img-container">
@@ -342,7 +342,7 @@
                     </div>
                 <!-- </div>
                 <div class = "row"> -->
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">Takes 7-10 business days to respond to messages, is trying his best.</div>
                             <div class = "img-container">
@@ -354,7 +354,7 @@
                         <p class = "name"> Jeffrey Shen</p>
                         <p class = "role"> Architecture </p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot green">
                             <div class = "quote">Every time you cut a corner you leave yourself with two more.</div>
                             <div class = "img-container">
@@ -366,7 +366,7 @@
                         <p class = "name"> Joe Li</p>
                         <p class = "role"> Mechanical Engineering</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">“The only thing predictable about<br>life is its unpredictability.” <br> – Ratatouille</div>
                             <div class = "img-container">
@@ -378,7 +378,7 @@
                         <p class = "name"> Katrina Gonzales</p>
                         <p class = "role"> Public Health + MCB</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -392,7 +392,7 @@
                     </div>
                 <!-- </div>
                 <div class = "row"> -->
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot green">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -404,7 +404,7 @@
                         <p class = "name"> Leo Gamboa</p>
                         <p class = "role" >MCB + Political Science</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">Mr. Worldwide </div>
                             <div class = "img-container">
@@ -416,7 +416,7 @@
                         <p class = "name"> Malena Kleiven</p>
                         <p class = "role"> Sustainable Env. Design </p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -428,7 +428,7 @@
                         <p class = "name"> Michael Salamy </p>
                         <p class = "role"> Mechanical Engineering </p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">All you need is <br> twenty seconds of insane courage, and something great will come of it.</div>
                             <div class = "img-container">
@@ -442,7 +442,7 @@
                     </div>
                 <!-- </div>
                 <div class = "row"> -->
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">I'm wearing transition lenses because I'm adaptable and visionary.</div>
                             <div class = "img-container">
@@ -454,7 +454,7 @@
                         <p class = "name">Neema Rashidi</p>
                         <p class = "role">Molecular Cell Biology</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">When you can't decide between two ice cream flavors, buy them both. Don't limit yourself.</div>
                             <div class = "img-container">
@@ -466,7 +466,7 @@
                         <p class = "name">Nicole Malow</p>
                         <p class = "role">Bioengineering</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">Trust yourself, trust your team, and trust the process. </div>
                             <div class = "img-container">
@@ -478,7 +478,7 @@
                         <p class = "name"> Nik Yerasi</p>
                         <p class = "role">Data Science</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot green">
                             <div class = "quote">Messiness & Laziness - Correlation not Causation</div>
                             <div class = "img-container">
@@ -492,7 +492,7 @@
                     </div>
                 <!-- </div>
                 <div class = "row"> -->
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">will make a Spotify playlist for u</div>
                             <div class = "img-container">
@@ -504,7 +504,7 @@
                         <p class = "name">Qianning Tang</p>
                         <p class = "role">Sustainable Env. Design</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -516,7 +516,7 @@
                         <p class = "name">Regan Connell</p>
                         <p class = "role">Data Science</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot green">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -528,7 +528,7 @@
                         <p class = "name">Reid Johnson</p>
                         <p class = "role">Applied Math + Computer Science</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">I'm addicted to a 2007 medieval clicking simulator please send help</div>
                             <div class = "img-container">
@@ -542,7 +542,7 @@
                     </div>
                 <!-- </div>
                 <div class = "row"> -->
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot yellow">
                             <div class = "quote">If you're scared of being 'too optimistic' you'll become a realist – and that's no fun.</div>
                             <div class = "img-container">
@@ -554,7 +554,7 @@
                         <p class = "name">Shantaam Chawla</p>
                         <p class = "role">EECS</p>
                     </div>
-                    <div class = "col-4 col-sm-3">
+                    <div class = "col-4 col-md-3">
                         <div class="dot red">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
@@ -566,7 +566,7 @@
                         <p class = "name">Sunny Hsu</p>
                         <p class = "role">Civil Engineering</p>
                     </div>
-                    <div class = "col-6 col-sm-3">
+                    <div class = "col-6 col-md-3">
                         <div class="dot blue">
                             <div class = "quote">Can you really expect me to describe myself in 15 words? I am a complex</div>
                             <div class = "img-container">
@@ -578,7 +578,7 @@
                         <p class = "name">Tanthai Pongstien</p>
                         <p class = "role">Mechanical Engineering</p>
                     </div>
-                    <div class = "col-6 col-sm-3">
+                    <div class = "col-6 col-md-3">
                         <div class="dot green">
                             <div class = "quote">Placeholder for a quote that could be really long and annoying to implement</div>
                             <div class = "img-container">
