--- a/v1.5/webdevteam.html
+++ b/v1.5/webdevteam.html
@@ -55,10 +55,14 @@
                     <li class="nav-item">
                         <a class="nav-link projects" href="projects.html">Projects</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link contact" href="https://forms.gle/dSAgFm9jpetY4B4T6" target="_blank">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <div class = "header">
         <h1> OUR WEBSITE TEAM </h1>
         <p> Meet the heart behind the developement, content, and design for this site!</p>
@@ -66,7 +70,11 @@
     <div class = "web">
         <div class = "cont"> 
                 <div class = "row">
+
                     <div class = "col-6 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
+                        </div>
                         <div class="dot red">
                             <div class = "quote">neha's quote 2.0</div>
                             <div class = "img-container">
@@ -76,7 +84,11 @@
                         <p class = "name"> Neha Dabke</p>
                         <p class = "role"> Development Lead + Content <br> nehadabke@berkeley.edu</p>
                     </div>
+
                     <div class = "col-6 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
+                        </div>
                         <div class="dot red">
                             <div class = "quote">maya's quote 2.0</div>
                             <div class = "img-container">
@@ -86,7 +98,11 @@
                         <p class = "name"> Maya Chen </p>
                         <p class = "role"> Content Lead + Design <br> coo@icb.berkeley.edu </p>
                     </div>
+
                     <div class = "col-6 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts2half" src="../assets/img/members/hearts2half.svg" class="hearts"/>
+                        </div>
                         <div class="dot red">
                             <div class = "quote">jasmine's quote 2.0</div>
                             <div class = "img-container">
@@ -96,25 +112,32 @@
                         <p class = "name"> Jasmine Chen </p>
                         <p class = "role"> Design Lead + Content <br> cmo@icb.berkeley.edu</p>
                     </div>
+
                     <div class = "col-0 col-md-5th">
                         <div class="dot blank">
                         </div>
                         <p class = "dark name"> Placeholder </p>
                         <p class = "dark role"> Placeholder + Placeholder<br> fake email address</p>
                     </div>
+
                     <div class = "col-0 col-md-5th">
                         <div class="dot blank">
                         </div>
                         <p class = "dark name"> Placeholder </p>
                         <p class = "dark role"> Placeholder + Placeholder<br> fake email address</p>
                     </div>
+
                     <div class = "col-0 col-md-5th">
                         <div class="dot blank">
                         </div>
                         <p class = "dark name"> Placeholder </p>
                         <p class = "dark role"> Placeholder + Placeholder<br> fake email address</p>
                     </div>
+
                     <div class = "col-6 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts2half" src="../assets/img/members/hearts2half.svg" class="hearts"/>
+                        </div>
                         <div class="dot yellow">
                             <div class = "quote">I like pie</div>
                             <div class = "img-container">
@@ -124,7 +147,11 @@
                         <p class = "name"> Bongi Fleischer </p>
                         <p class = "role"> Development + Content <br> ceo@icb.berkeley.edu</p>
                     </div>
+
                     <div class = "col-6 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts2" src="../assets/img/members/hearts2.svg" class="hearts"/>
+                        </div>
                         <div class="dot yellow">
                             <div class = "quote">courtnie's quote</div>
                             <div class = "img-container">
@@ -134,6 +161,7 @@
                         <p class = "name"> Courtnie Chan </p>
                         <p class = "role"> Development <br> courtnie@berkeley.edu</p>
                     </div>
+
                     <div class = "col-0 col-md-5th">
                         <div class="dot blank">
                         </div>
@@ -146,16 +174,19 @@
                         </div>
                         <p class = "dark name"> Placeholder </p>
                         <p class = "dark role"> Placeholder + Placeholder<br> fake email address</p>
-                        
                     </div>
+
                     <div class = "col-0 col-md-5th">
                         <div class="dot blank">
                         </div>
                         <p class = "dark name"> Placeholder </p>
                         <p class = "dark role"> Placeholder + Placeholder<br> fake email address</p>
-                        
                     </div>
+
                     <div class = "col-6 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
+                        </div>
                         <div class="dot green">
                             <div class = "quote">anika's quote 2.0</div>
                             <div class = "img-container">
@@ -165,7 +196,11 @@
                         <p class = "name"> Anika Singhania </p>
                         <p class = "role"> Development + Content <br> anikasinghania@berkeley.edu</p>
                     </div>
+
                     <div class = "col-6 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts1half" src="../assets/img/members/hearts1half.svg" class="hearts"/>
+                        </div>
                         <div class="dot green">
                             <div class = "quote">natalie's quote 2.0</div>
                             <div class = "img-container">
@@ -175,7 +210,11 @@
                         <p class = "name"> Natalie Chu </p>
                         <p class = "role"> Design + Content <br> cho@icb.berkeley.edu</p>
                     </div>
+
                     <div class = "col-6 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts2" src="../assets/img/members/hearts2.svg" class="hearts"/>
+                        </div>
                         <div class="dot blue">
                             <div class = "quote">iris' quote 2.0</div>
                             <div class = "img-container">
@@ -185,7 +224,11 @@
                         <p class = "name"> Iris Hou </p>
                         <p class = "role"> Dev + Design + Content <br> ihou@berkeley.edu</p>
                     </div>
-                    <div class = "col-6 col-sm-4 col-md-5th">
+
+                    <div class = "col-12 col-sm-4 col-md-5th">
+                        <div class="d-flex justify-content-center heart-container">
+                            <img alt="hearts3" src="../assets/img/members/hearts3.svg" class="hearts"/>
+                        </div>
                         <div class="dot blue">
                             <div class = "quote">zulaika's quote</div>
                             <div class = "img-container">
@@ -195,13 +238,22 @@
                         <p class = "name"> Zulaika Zulkephli</p>
                         <p class = "role"> Design + Content <br> zz_1093@berkeley.edu</p>
                     </div>
+
                 </div>
         </div>
     </div>
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
+        <div class="footer-icons">
+            <div class="row" style="padding: 0;">
+                <a class="col-3 footer-icon-1" href="mailto:inventioncorps@icb.berkeley.edu" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a class="col-3 footer-icon-2" href="https://www.linkedin.com/company/berkeley-invention-corps/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a class="col-3 footer-icon-3" href="https://www.facebook.com/InventionCorps" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a class="col-3 footer-icon-4" href="https://www.instagram.com/inventioncorps/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
         Made with ♥ by the
-        <span> <a href="webdevteam.html"> Invention Corps Web Team </a> </span> <br>Copyright © 2020
+        <span> <a href="webdevteam.html"> Invention Corps Web Team</a> </span>
     </footer>
 
     <!-- Bootstrap Scripts -->
