clouds background webteam

--- a/v1.5/webdevteam.html
+++ b/v1.5/webdevteam.html
@@ -63,6 +63,17 @@
         </div>
     </nav>
 
+    <!-- Background images -->
+
+    <div class = "clouds-left">
+        <img alt="clouds" src="../assets/img/members/cloud-left.svg" class = "clouds-img-1"/>
+    </div>
+
+    <div class = "clouds-right">
+        <img alt="clouds" src="../assets/img/members/cloud-right.svg" class = "clouds-img-2"/>
+    </div>
+
+
     <div class = "header">
         <h1> OUR WEBSITE TEAM </h1>
         <p> Meet the heart behind the developement, content, and design for this site!</p>
