I can't even remember anymore, but definitely something to do with the website

--- a/v1.5/catheter15.html
+++ b/v1.5/catheter15.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>floating urban blocks</title> <!-- CHANGE the title-->
+  <title>brain-saving catheter</title> <!--the title-->
   <meta name="description" content="Project"/>
   <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
 
@@ -32,7 +32,7 @@
   <!-- <link rel="stylesheet" href="../assets/css/projectsv15.css" type="text/css" /> -->
   <link rel="stylesheet" href="../assets/css/anindividualproj15.css" type="text/css" />
 <!-- Project specific style sheet -->
-<link rel="stylesheet" href="../assets/css/floatingblocks.css" type="text/css" /> <!-- CHANGE the stylesheet href-->
+<link rel="stylesheet" href="../assets/css/catheter.css" type="text/css" /> <!--the stylesheet href-->
 </head>
 
 <body>
@@ -73,12 +73,12 @@
         <div class="container">
             <div class="cool row">
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
-                    <img src="../assets/img/floatingblocks15/floating-landing.svg" class="topbar-img"> <!-- CHANGE the landing image-->
+                    <img src="../assets/img/catheter15/catheter-landing.svg" class="topbar-img"> <!--the landing image-->
                 </div>
                 <div class="col-12 col-lg-6">
                     <div class="holder">
-                    <h1 id="proj-title">floating urban blocks</h1> <!-- CHANGE the title-->
-                    <h5>modeling communities that adapt to rising sea levels</h5> <!-- CHANGE the text-->
+                    <h1 id="proj-title">brain-saving catheter</h1> <!--the title-->
+                    <h5>minimizing brain damage to  high-risk icu patients </h5> <!--the text-->
                     <br>
                     <hr id="topbar-hr">
                         <div class="row details">
@@ -86,7 +86,7 @@
                                 <h4 id="proj-details">Duration</h4>
                             </div>
                             <div class="col-8">
-                                <h6 id="proj-answers">Sept 2017 - Dec 2017</h6> <!-- CHANGE the duration-->
+                                <h6 id="proj-answers">Sept 2018 - May 2019</h6> <!--the duration-->
                             </div>
                         </div>
                         <div class="row details">
@@ -94,7 +94,7 @@
                                 <h4 id="proj-details">Focus</h4>
                             </div>
                             <div class="col-8">
-                                <h6 id="proj-answers">Environmental Issues</h6> <!-- CHANGE the focus-->
+                                <h6 id="proj-answers">Medical</h6> <!--the focus-->
                             </div>
                         </div>
                         <div class="row details">
@@ -102,7 +102,7 @@
                                 <h4 id="proj-details">Tools</h4>
                             </div>
                             <div class="col-8">
-                                <h6 id="proj-answers">Rapid Prototyping, CAD</h6> <!-- CHANGE the tools-->
+                                <h6 id="proj-answers">Rapid Prototyping, CAD</h6> <!--the tools-->
                             </div>
                         </div>
                         <div class="row details">
@@ -110,7 +110,7 @@
                                 <h4 id="proj-details">Partner</h4>
                             </div>
                             <div class="col-8">
-                                <h6 id="proj-answers">Kristina Hill, Nate Kauffman</h6> <!-- CHANGE the partner-->
+                                <h6 id="proj-answers">Voyage Biomedical</h6> <!--the partner-->
                             </div>
                         </div>
                    
@@ -130,10 +130,10 @@
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container d-flex justify-content-center">
-                            <img alt="regina" src="../assets/img/floatingblocks15/regina.svg" class = "member"/> <!-- CHANGE to first team member img-->
+                            <img alt="evan" src="../assets/img/catheter15/evan.svg" class = "member"/> <!--first team member img-->
                         </div>
                         <div class="team-names">
-                            <h7>Regina Madanguit</h7> <!-- CHANGE to first tea mmember-->
+                            <h7>Evan Koretsky</h7> <!--first team member-->
                             <p>Project Lead</p>
                         </div>
                     </div>
@@ -142,11 +142,11 @@
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container d-flex justify-content-center">
-                            <img alt="aryan" src="../assets/img/floatingblocks15/aryan.svg" class = "member"/> <!-- CHANGE to second teamm ember img-->
+                            <img alt="anderson" src="../assets/img/catheter15/anderson.svg" class = "member"/> <!--second teamm ember img-->
                         </div>
                         <div class="team-names">
-                            <h7>Aryan Nair</h7> <!-- CHANGE to second team member-->
-                            <p>Material Analysis</p>
+                            <h7>Anderson Lee</h7> <!--second team member-->
+                            <p>Project Lead</p>
                         </div>
                     </div>
                 </div>
@@ -154,11 +154,11 @@
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container d-flex justify-content-center">
-                            <img alt="joey" src="../assets/img/floatingblocks15/joey.svg" class = "member"/> <!-- CHANGE to third team member img-->
+                            <img alt="leilani" src="../assets/img/catheter15/leilani.svg" class = "member"/> <!--third team member img-->
                         </div>
                         <div class="team-names">
-                            <h7>Joey Besgen</h7> <!-- CHANGE to third team member-->
-                            <p>Material Analysis</p>
+                            <h7>Leilani Chu</h7> <!--third team member-->
+                            <p>UI/UX Design</p>
                         </div>
                     </div>
                 </div>
@@ -166,11 +166,11 @@
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container d-flex justify-content-center">
-                            <img alt="jamesz" src="../assets/img/floatingblocks15/jamesz.svg" class = "member"/> <!-- CHANGE to fourth team member-->
+                            <img alt="laurel" src="../assets/img/catheter15/laurel.svg" class = "member"/> <!--fourth team member-->
                         </div>
                         <div class="team-names">
-                            <h7>James Zamora</h7> <!-- CHANGE to fourth team member-->
-                            <p>User Research</p>
+                            <h7>Laurel Nelson</h7> <!--fourth team member-->
+                            <p>Product Design</p>
                         </div>
                     </div>
                 </div>
@@ -178,11 +178,11 @@
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container d-flex justify-content-center">
-                            <img alt="ariel" src="../assets/img/floatingblocks15/ariel.svg" class = "member"/> <!-- CHANGE to fifth team member img-->
+                            <img alt="michael" src="../assets/img/catheter15/michael.svg" class = "member"/> <!--fifth team member img-->
                         </div>
                         <div class="team-names">
-                            <h7>Ariel Chen</h7> <!-- CHANGE to fifth team member-->
-                            <p>User Research</p>
+                            <h7>Michael Salamy</h7> <!--fifth team member-->
+                            <p>Patent Law</p>
                         </div>
                     </div>
                 </div>
