--- a/v1.5/commcafe15.html
+++ b/v1.5/commcafe15.html
@@ -312,7 +312,7 @@
         <h2 class="deliverables-header">Deliverables</h2>
             <div class="container">
                 <p>
-                    
+                    To address the lack of knowledge about food insecurity, we created an educational report to serve as an informational resource for Berkeley students. By combining Pizza with a Purpose and Community Cafe, we were able to design assets and create a strong brand to communicate the atmosphere of a safe space for students to have affordable food on campus.
                 </p> <!--deliverables overview-->
             </div>
 
