--- a/indexv15.html
+++ b/indexv15.html
@@ -104,16 +104,22 @@
         <!-- Mission and Members -->
         <div class="members-section">
             <div class="container members">
-                <h2 id="members-title" class="d-flex justify-content-center">Who are we?</h2>
-                <p class="container"> Introducing the hearts and creative minds behind our work. </p>
-                <div class="button" id="members-button" onclick="window.location.href='v1.5/members.html';">Members</div>
-                <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center" alt="Drawing a better future.">
                 <div class="container">
                     <h2 id="about-title" class="d-flex justify-content-center">Our Story</h2>
                     <p class="container"> Learn more about our mission, values, and founding principles. </p>
                 </div>
                 <div class="button" id="about-button" onclick="window.location.href='v1.5/about.html';">About</div>
+
                 <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center" alt="Drawing a better future.">
+
+                <div class="container">
+                    <h2 id="members-title" class="d-flex justify-content-center">Who are we?</h2>
+                    <p class="container"> Introducing the hearts and creative minds behind our work. </p>
+                </div>
+                <div class="button" id="members-button" onclick="window.location.href='v1.5/members.html';">Members</div>
+                
+                <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center" alt="Drawing a better future.">
+
                 <div class="container">
                     <h2 id="projects-title" class="d-flex justify-content-center">Work with us.</h2>
                     <p class="container"> Gain insight into our design process and project capabilities. </p>
