formatting of mainscroll.html document

--- a/indexv15.html
+++ b/indexv15.html
@@ -94,7 +94,12 @@
         <div class="about-section">
             <div class="about-content container">
                 <h2 id ="about-header">Inventing ways to make a better world.</h2>
-                <p class="about-txt"> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create meaningful global impact through human-centered design. We partner with people and organizations with the objective of creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
+                <p class="about-txt">
+                    We are Invention Corps of Berkeley. As a collective,
+                    we are an interdisciplinary group of students driven to create meaningful global impact
+                    through human-centered design. We partner with people and organizations with the objective
+                    of creating tangible solutions in the realms of society, health, poverty, and the environment.
+                </p>
             </div>
             <div class="about-img img-container">
                 <img class="scene" data-modifier="0" src="assets/img/mainscrollv15/scroll-level-1.png">
