made basis of new projects info section; added all content

--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -85,7 +85,43 @@
             <mark style="border-radius: 10%; background-color: #FFF6A9;">TOPIC</mark>
             <mark style="border-radius: 10%; background-color: #CCF4D5;">TOOLS USED</mark>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
-        <div class="container" style="padding-top: 2%;">
+            
+            <div class="container">
+                <h2 class="proj-subheader">Let’s Collaborate!</h2>
+                <h4 class="proj-caption">What does a partnership with us look like?</h4>
+                <p class="proj-text">
+                    We work on semester-long, pro-bono projects. In the past, we've partnered with 30+ professors, startups, and nonprofits both locally and internationally. Got a project idea but don’t have sufficient time or resources to allocate? We will work with you to assemble the dream team for your project. We are currently open for applications for our fall projects!
+                </p>
+                <h4 class="proj-caption">What we can do:</h4>
+                <p class="proj-text">
+                    Through partnerships, we hope to engage communicative organizations and build a transparent, prolonged relationship with our mentors and team. We utilize design thinking frameworks in every project we take on, in order to create innovative, thoughtful, and intentional solutions that create a tangible impact with the user in mind.
+                </p>
+                <img src="../assets/img/projects/design-thinking.svg">
+                <h4 class="proj-caption">A breakdown of our club:</h4>
+                <p class="proj-text">
+                    Our members' skillsets are diverse and include experience with rapid prototyping, web and app development (frontend and backend), user research and interviews, electrical engineering, patent law, 3D modeling, organizational reports, and much more. Feel free to browse through our project gallery below to get a more holistic picture of the work we do.
+                </p>
+                <div class="row">
+                    <div class="col-6 d-flex justify-content-center">
+                        <img src="../assets/img/projects/major-distribution.svg">
+                    </div>
+                    <div class="col-6 d-flex justify-content-center">
+                        <img src="../assets/img/projects/member-skillsets.svg">
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-6 d-flex justify-content-center">
+                        <h4 class="proj-caption">Interested?</h4>
+                    </div>
+                    <div class="col-6 d-flex justify-content-center">
+                        <div id="contact-button" onclick="window.location.href='https://forms.gle/dSAgFm9jpetY4B4T6';">Contact Us</div>
+                    </div>
+                </div>
+                <hr>
+            </div>
+
+            <div class="container" style="padding-top: 2%;">
             <div class="row">
               <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
