--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -80,10 +80,6 @@
     <div class="container">
         <h1 style="text-align: center;">PROJECT GALLERY</h1>
         <h6 style="text-align: center;  font-style: italic; font-weight: .1px; padding-bottom: 4%;">View our assortment of projects over the years.</h6>
-        <p style="padding-left: 6.7%;">Categories: 
-            <mark style="border-radius: 10%; background-color: #CCE6FF;">DELIVERABLES</mark>
-            <mark style="border-radius: 10%; background-color: #FFF6A9;">TOPIC</mark>
-            <mark style="border-radius: 10%; background-color: #CCF4D5;">TOOLS USED</mark>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
             
             <div class="container">
@@ -96,7 +92,7 @@
                 <p class="proj-text">
                     Through partnerships, we hope to engage communicative organizations and build a transparent, prolonged relationship with our mentors and team. We utilize design thinking frameworks in every project we take on, in order to create innovative, thoughtful, and intentional solutions that create a tangible impact with the user in mind.
                 </p>
-                <img src="../assets/img/projects/design-thinking.svg">
+                <img src="../assets/img/projects/design-thinking.svg" style="display: block; margin: auto;">
                 <h4 class="proj-caption">A breakdown of our club:</h4>
                 <p class="proj-text">
                     Our members' skillsets are diverse and include experience with rapid prototyping, web and app development (frontend and backend), user research and interviews, electrical engineering, patent law, 3D modeling, organizational reports, and much more. Feel free to browse through our project gallery below to get a more holistic picture of the work we do.
@@ -121,6 +117,12 @@
                 <hr>
             </div>
 
+        <p style="padding-left: 6.7%; padding-top: 2rem;">Categories:
+            <mark style="border-radius: 10%; background-color: #CCE6FF;">DELIVERABLES</mark>
+            <mark style="border-radius: 10%; background-color: #FFF6A9;">TOPIC</mark>
+            <mark style="border-radius: 10%; background-color: #CCF4D5;">TOOLS USED</mark>
+        </p>
+            
             <div class="container" style="padding-top: 2%;">
             <div class="row">
               <div class="col-6 col-sm-4" style="text-align: center">
