fixed sizing of all titles

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -80,8 +80,8 @@
         others.
     </p>
 
-    <h2 id="mission">Mission & Values</h2>
-    <h4 id="invent">Inventing new ways to make a better world.</h4>
+    <h2 id="mission">Our Mission & Values</h2>
+    <h4 class="invent">Inventing new ways to make a better world.</h4>
     <p id="front">
         Our mission as a multidisciplinary organization focuses on human-centered design that partners with professors,
         companies, non-profits, and any entity for social good on campus and beyond. Our goal is to develop specific projects
