mainscroll spacing redo

--- a/indexv15.html
+++ b/indexv15.html
@@ -67,10 +67,10 @@
 
         <!-- Background Images-->
         <div class = "clouds">
-            <img class="scene" data-modifier="55" src="assets/img/mainscrollv15/scroll-level-2b.png">
+            <img class="scene" data-modifier="85" src="assets/img/mainscrollv15/scroll-level-2b.png">
         </div>
         <div class = "planets">
-            <img class="scene" data-modifier="5" src="assets/img/mainscrollv15/bottom-planets.png">
+            <img class="scene" data-modifier="110" src="assets/img/mainscrollv15/bottom-planets.png">
         </div>
 
         <!-- Landing Section -->
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class = "img-container">
-                <img class="scene" data-modifier="75" src="assets/img/mainscrollv15/scroll-level-2a.png">
+                <img class="scene" data-modifier="150" src="assets/img/mainscrollv15/scroll-level-2a.png">
             </div>
             <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
             <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
@@ -118,7 +118,7 @@
                 <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center" alt="Drawing a better future.">
 
                 <div class="container">
-                    <h2 id="members-title" class="d-flex justify-content-center">Who are we?</h2>
+                    <h2 id="members-title" class="d-flex justify-content-center">Who We Are</h2>
                     <p class="container"> Introducing the hearts and creative minds behind our work. </p>
                 </div>
                 <div class="button" id="members-button" onclick="window.location.href='v1.5/members.html';">Members</div>
@@ -126,7 +126,7 @@
                 <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center" alt="Drawing a better future.">
 
                 <div class="container">
-                    <h2 id="projects-title" class="d-flex justify-content-center">Work with us.</h2>
+                    <h2 id="projects-title" class="d-flex justify-content-center">Work With Us</h2>
                     <p class="container"> Gain insight into our design process and project capabilities. </p>
                 </div>
                 <div class="button" id="projects-button" onclick="window.location.href='v1.5/projects.html';">Projects</div>
